<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="My_Nano_textView">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="Spotify_streamer_button">Spotify Streamer</string>
    <string name="scores_app_button">Scores App</string>
    <string name="libraryApp">Library App</string>
    <string name="buildItBiggerButton">Build It Bigger</string>
    <string name="XYZreaderButton">XYZ Reader</string>
    <string name="capstoneButton">Capstone: MY OWN APP</string>
</resources>
