<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center|top"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/My_Nano_textView" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:id="@+id/textView" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/Spotify_streamer_button"
        android:id="@+id/buttonSpotify"
        android:layout_marginTop="20dp"
        android:background="#fbae34"
        android:onClick="showSpotifyToast"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/scores_app_button"
        android:id="@+id/buttonScoresApp"
        android:layout_marginTop="16dp"
        android:background="#fbae34"
        android:onClick="showScoresToast"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/libraryApp"
        android:id="@+id/buttonLibraryApp"
        android:layout_marginTop="16dp"
        android:background="#fbae34"
        android:onClick="showLibraryApp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/buildItBiggerButton"
        android:id="@+id/buttonBuildItBigger"
        android:layout_marginTop="16dp"
        android:background="#fbae34"
        android:onClick="showBuildItBigger"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/XYZreaderButton"
        android:id="@+id/buttonXYZreader"
        android:layout_marginTop="16dp"
        android:background="#fbae34"
        android:onClick="showXYZreader"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/capstoneButton"
        android:id="@+id/buttonCapstone"
        android:layout_marginTop="16dp"
        android:background="#fb3482"
        android:onClick="showCapstoneMyApp"/>


</LinearLayout>
